<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_assignment_24"
            android:title="@string/Testpapers" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_assessment_24"
            android:title="@string/PracticePapers" />
        <item
            android:id="@+id/nav_mcq"
            android:icon="@drawable/ic_baseline_check_circle_outline_24"
            android:title="@string/mcq" />
    </group>
    <item android:title="Communication">
        <menu>
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_baseline_call_end_24"
                android:title="@string/contact"
                />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_baseline_share_24"
                android:title="@string/share"
                />

        </menu>
    </item>


</menu>