<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_for_android_app_3"
    tools:context=".ui.home.HomeFragment">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="532dp"
        android:layout_height="255dp"
        android:contentDescription="@string/tuition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/annotation_2020_07_05_163132" />

    <TextView
        android:id="@+id/text_home"
        android:layout_width="395dp"
        android:layout_height="468dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:text="@string/text_home"
        android:textColor="#FFEB3B"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="241dp"
        android:layout_height="36dp"
        android:layout_marginTop="220dp"
        android:layout_marginBottom="3dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/owner"
        android:textColor="#D84141"
        android:textColorHighlight="#FFFFFF"
        android:textColorLink="#3F51B5"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/text_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="337dp"
        android:layout_height="423dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_home">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="340dp"
            android:layout_height="431dp"
            android:gravity="center"
            android:text="@string/textview4"
            android:textColor="#FFEB3B"
            android:textSize="24sp"
            android:visibility="visible"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="269dp" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>